# viewpoint_pose_tree

./: .gitignore  README
ann_catkin/: CMakeLists.txt  package.xml
ann_catkin/ann_1.1.1/include/ANN/: ANN.h
test_vp_tree/: CMakeLists.txt  package.xml
test_vp_tree/include/test_vp_tree/: simple_color_point_cloud_analyzer.hpp  simple_point_cloud_analyzer.hpp
test_vp_tree/launch/: test_vp_tree.launch
test_vp_tree/src/: simple_color_point_cloud_analyzer.cpp  simple_point_cloud_analyzer.cpp
util_pkg/: CMakeLists.txt  package.xml
util_pkg/include/: boost_discrete_distribution_sampler.hpp  io_utils.hpp  metric_map.hpp  misc.hpp  ood_visualization.hpp  pcd_utils.hpp
util_pkg/src/: io_utils.cpp  misc.cpp  ood_visualization.cpp  pcd_utils.cpp  test_boost_dd_sampler.cpp
virtual_kinect_pkg/: CMakeLists.txt  package.xml
virtual_kinect_pkg/cfg/: test_virtual_kinect_color.rviz
virtual_kinect_pkg/include/virtual_kinect_pkg/: virtual_kinect.hpp  vkin_offline.hpp
virtual_kinect_pkg/launch/: test_virtual_kinect.launch
virtual_kinect_pkg/src/: start_vkin_serv.cpp  test_virtual_kinect.cpp  virtual_kinect.cpp  vkin_offline.cpp
vision_module/: CMakeLists.txt  package.xml
vision_module/include/: tabletop_analyzer.hpp  tabletop_color_analyzer.hpp
vision_module/include/vision_module/: vtree_color_user.hpp  vtree_user.hpp
vision_module/launch/: build_color_tree_database.launch  build_tree_database.launch
vision_module/script/: build_conf_mat  build_obs_model  build_obs_model_occ  cor  extract_tree_train_pcds  extract_tree_train_pcds_color  study_pcd  views_to_pcd_model
vision_module/src/: analyze_pcd_with_noise.cpp  build_color_tree.cpp  build_omap.cpp  build_omap_occ.cpp  build_tree.cpp  compute_confmat.cpp  fix_omap.cpp  fix_omap_v2.cpp  pcd_from_ply.cpp  ply2colortraindata.cpp  ply2traindata.cpp  score_pcd.cpp  tabletop_analyzer.cpp  tabletop_color_analyzer.cpp  tmp_fxr.cpp  views_to_pcd_model.cpp  vtree_color_user.cpp  vtree_user.cpp  vtree_user_old.cpp
vocabulary_tree/: CMakeLists.txt  package.xml
