<?xml version="1.0"?>
<package>
  <name>virtual_kinect_pkg</name>
  <version>0.0.0</version>
  <description>The virtual_kinect_pkg package</description>

  <maintainer email="bsankara@usc.edu">Bharath Sankaran</maintainer>

  <license>BSD</license>


   <author email="bsankara@usc.edu">Bharath Sankaran and Nikolay Atanasov</author>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>pcl</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>util_pkg</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>pcl</run_depend>
   <run_depend>pcl_ros</run_depend>

</package>
